# esp32-wifi-hal-rs

./: README.md
esp-wifi-hal/: Cargo.toml  build.rs
esp-wifi-hal/.cargo/: config.toml
esp-wifi-hal/src/: dma_list.rs  ffi.rs  lib.rs  sync.rs  wmac.rs
esp32-wifi-hal-rs/src/: wmac.rs
examples/: Cargo.toml
examples/.cargo/: config.toml
