[package]
name = "esp-wifi-hal"
version = "0.1.0"
authors = ["Frostie314159 <frostie.neuenhausen@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-wifi-sys = "0.7.0"
esp-hal = { version = "0.23.1", features = ["unstable"] }
esp32 = { version = "0.35.0", optional = true }
esp32s2 = { version = "0.26.0", optional = true }
esp32c3 = { version = "0.27.0", optional = true }

# Embassy dependencies
embassy-futures = "0.1.1"
embassy-sync = "0.6.1"
embassy-time = "0.4.0"

log = { version = "0.4.21", optional = true }
critical-section = "1.1.3"
static_cell = { version = "2.1.0" }
bitfield-struct = "0.8.0"
atomic-waker = { version = "1.1.2", features = ["portable-atomic"] }
macro-bits = "0.1.5"
defmt = { version = "0.3.8", optional = true }
portable-atomic = "1.10.0"
cfg-if = "1.0.0"
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[features]
esp32 = ["dep:esp32", "esp-hal/esp32", "esp-wifi-sys/esp32"]
esp32s2 = ["dep:esp32s2", "esp-hal/esp32s2", "esp-wifi-sys/esp32s2", "portable-atomic/critical-section"]

defmt = ["dep:defmt"]
log = ["dep:log"]
critical_section = []
