[package]
name = "examples"
version = "0.1.0"
authors = ["Frostie314159 <frostie.neuenhausen@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]

esp-wifi-hal = { path = "../esp-wifi-hal/", features = ["log"] }

# ESP-HAL dependencies
esp-hal = "0.23.1"
esp-hal-embassy = "0.6.0"
esp-alloc = "0.6.0"
esp-backtrace = { version = "0.15.0", features = [
    "panic-handler",
    "println",
] }
esp-println = { version = "0.13.0", features = ["log"] }

# Embassy dependencies

# Misc
log = "0.4.21"
static_cell = { version = "2.1.0" }
ieee80211 = "0.5.2"
embedded-io-async = "0.6.1"
embassy-futures = "0.1.1"
embassy-executor = "0.7.0"
embassy-time = "0.4.0"

[features]
esp32 = ["esp-wifi-hal/esp32", "esp-hal/esp32", "esp-hal-embassy/esp32", "esp-backtrace/esp32"]
esp32s2 = ["esp-wifi-hal/esp32s2", "esp-hal/esp32s2", "esp-hal-embassy/esp32s2", "esp-backtrace/esp32s2"]
esp32c3 = ["esp-wifi-hal/esp32c3", "esp-hal/esp32c3", "esp-hal-embassy/esp32c3", "esp-backtrace/esp32c3"]

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
